--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   json_annotation: ^3.1.1
   flutter_countdown_timer: ^3.0.1
   google_maps_flutter: ^1.2.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
