--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_countdown_timer: ^3.0.1
   google_maps_flutter: ^1.2.0
   intl: ^0.16.1
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
